[gd_scene load_steps=11 format=3 uid="uid://dddrbmiu2lr5w"]

[ext_resource type="Theme" uid="uid://djixmxq3id4w8" path="res://dropdown_theme.tres" id="1_ay4k6"]
[ext_resource type="Script" path="res://dropdown_control/dropdown_control.gd" id="2_mdmq3"]
[ext_resource type="Texture2D" uid="uid://cxqcxf51l1y72" path="res://dropdown_control/information.svg" id="3_3m36h"]
[ext_resource type="Texture2D" uid="uid://bfk0y4xgbcm41" path="res://dropdown_control/down.svg" id="4_bpifk"]
[ext_resource type="Texture2D" uid="uid://dg6hvujpe0ryc" path="res://dropdown_control/search.svg" id="6_c4kfb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fnl8h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sop6p"]
content_margin_left = 4.0
content_margin_bottom = 6.0
bg_color = Color(0.682353, 0.694118, 0.709804, 1)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.164706)
shadow_size = 5
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w8s2d"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gawkx"]
content_margin_left = 8.0
content_margin_top = 1.0
content_margin_right = 4.0
content_margin_bottom = 4.0
border_width_bottom = 1
border_color = Color(0.14902, 0.168627, 0.192157, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62ao5"]
content_margin_left = 6.0
content_margin_right = 6.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="DropdownControl" type="Control"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -25.0
offset_right = 206.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ay4k6")
script = ExtResource("2_mdmq3")

[node name="DropdownButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="PanelContainer" type="PanelContainer" parent="DropdownButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_fnl8h")

[node name="HBoxContainer" type="HBoxContainer" parent="DropdownButton/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DropdownButton/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="DropdownButton/PanelContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SelectedTextureRect" type="TextureRect" parent="DropdownButton/PanelContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_3m36h")
expand_mode = 3
stretch_mode = 5

[node name="SelectedLabel" type="Label" parent="DropdownButton/PanelContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.14902, 0.168627, 0.192157, 1)
theme_override_font_sizes/font_size = 16
text = "LABELINO"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="TextureRect2" type="TextureRect" parent="DropdownButton/PanelContainer/HBoxContainer"]
modulate = Color(0.14902, 0.168627, 0.192157, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("4_bpifk")
expand_mode = 1
stretch_mode = 5

[node name="Control" type="Control" parent="DropdownButton/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="ItemsPanelContainer" type="PanelContainer" parent="."]
visible = false
z_index = 1100
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_sop6p")

[node name="ScrollContainer" type="ScrollContainer" parent="ItemsPanelContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_w8s2d")

[node name="ItemsVBoxContainer" type="VBoxContainer" parent="ItemsPanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="SearchPanelContainer" type="PanelContainer" parent="ItemsPanelContainer/ScrollContainer/ItemsVBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gawkx")

[node name="HBoxContainer" type="HBoxContainer" parent="ItemsPanelContainer/ScrollContainer/ItemsVBoxContainer/SearchPanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ItemsPanelContainer/ScrollContainer/ItemsVBoxContainer/SearchPanelContainer/HBoxContainer"]
self_modulate = Color(0.14902, 0.168627, 0.192157, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("6_c4kfb")
expand_mode = 1
stretch_mode = 5

[node name="SearchLabel" type="Label" parent="ItemsPanelContainer/ScrollContainer/ItemsVBoxContainer/SearchPanelContainer/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.14902, 0.168627, 0.192157, 1)
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1
clip_text = true

[node name="ClearSearchButton" type="Button" parent="ItemsPanelContainer/ScrollContainer/ItemsVBoxContainer/SearchPanelContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.14902, 0.168627, 0.192157, 1)
theme_override_colors/font_hover_color = Color(0.690196, 0.721569, 0.764706, 1)
theme_override_colors/font_focus_color = Color(0.328789, 0.363251, 0.404632, 1)
theme_override_colors/font_hover_pressed_color = Color(0.245496, 0.273612, 0.307361, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_62ao5")
theme_override_styles/hover = SubResource("StyleBoxFlat_62ao5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_62ao5")
theme_override_styles/disabled = SubResource("StyleBoxFlat_62ao5")
theme_override_styles/focus = SubResource("StyleBoxFlat_62ao5")
text = "x"

[connection signal="pressed" from="DropdownButton" to="." method="_on_dropdown_button_pressed"]
[connection signal="pressed" from="ItemsPanelContainer/ScrollContainer/ItemsVBoxContainer/SearchPanelContainer/HBoxContainer/ClearSearchButton" to="." method="_on_clear_search_button_pressed"]
